--- a/source/ui/src/main/resources/templates/checkout-confirm.html
+++ b/source/ui/src/main/resources/templates/checkout-confirm.html
@@ -17,6 +17,7 @@
     </div>
 </div>
 <form method="POST" id="checkoutForm" action="/checkout/confirm">
+    <input type="hidden" name="csrf_token" value="${_csrf.token}"/>
     <div class="box-footer d-flex justify-content-between"><a href="/cart" class="btn btn-outline-secondary"><i class="fa fa-chevron-left"></i>Back to Basket</a>
         <button type="submit" class="btn btn-primary">Order<i class="fa fa-chevron-right"></i></button>
     </div>
