--- a/source/ui/src/main/resources/templates/fragments/product_card.html
+++ b/source/ui/src/main/resources/templates/fragments/product_card.html
@@ -14,6 +14,7 @@
             <div class="my-2">
                 <form action="/cart" method="POST">
                     <input type="hidden" name="productId" th:value="${product.id}"/>
+                    <input type="hidden" name="csrf_token" value="${_csrf.token}"/>
                     <a href="#" onclick="this.closest('form').submit();return false;" class="btn btn-dark mt-auto"><i class="bi bi-cart pe-2"></i>Add to cart</a>
                 </form>
             </div>
